# qrself

./: Cargo.toml  default.nix  flake.nix  fly.toml
src/: main.rs
