[package]
name = "qrself"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
hyper = { version = "0.14.24", features = ["full"] }
image = "0.24.5"
image_at_qrcode_version = { version = "0.23", package = "image" }
qrcode = "0.12.0"
tokio = { version = "1.25.0", features = ["full"] }
